# election-rust

./: Cargo.toml  candidates.txt  save.json
src/: candidates.rs  cli.rs  main.rs
src/terminal/: candidate_display.rs  mod.rs  result_display.rs
src/terminal/voting_display/: ballot_paper_display.rs  candidate_selection_display.rs  mod.rs
src/utils/: candidate.rs  mod.rs
src/voting/: ballot.rs  candidate.rs  candidate_selection.rs  mod.rs
