[package]
name = "election-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.14", features = ["derive"] }
console = "0.15.7"
ctrlc = "3.4.2"
iter_tools = "0.4.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tempdir = "0.3.7"
